# segyhdr

./: .gitignore  CMakeLists.txt  README.md
include/: segy.h  stats.h  utils.h
source/: segy.cpp  sgyhdr.cpp
